--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -944,7 +944,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.707"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.708"></script>
                     
                     <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     -->
@@ -1607,9 +1607,9 @@
                             <div style="margin-bottom:5px">
                                 <button id="cryptonews_4" class="href-external col-12 btn btn-outline-info font-weight-bold text-black border-info cryptonews" style="border: 2px solid;"><div style=""><i class="fa fa-newspaper-o"></i></div><div>Crypto news</div></button>
                             </div>
-                            <div style="margin-bottom:5px">
+                            <!--<div style="margin-bottom:5px">
                                 <button id="trends-news_2" class="href-external col-12 btn btn-outline-info font-weight-bold text-black border-info trends-news" style="border: 2px solid;"><div style=""><i class="fa fa-newspaper-o"></i></div><div>Trends news</div></button>
-                            </div>
+                            </div>-->
                             <div style="margin-bottom:5px">
                                 <button id="sport-results-2" class="href-external col-12 btn btn-outline-info font-weight-bold text-black border-info sport-results" style="border: 2px solid;"><div style=""><i class="fa-solid fa-futbol"></i></div><div>Sport results</div></button>
                             </div>
@@ -1755,9 +1755,9 @@
                                 <button id="cryptonews_3" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success cryptonews" style="border: 2px solid;"><div style=""><i class="fa fa-newspaper-o"></i></div><div style="font-size:100%;" translate="no">NEWS</div><div style="font-size:80%;">Crypto news</div></button>
                             </div>
                             
-                            <div style="margin-bottom:5px">
+                            <!--<div style="margin-bottom:5px">
                                 <button id="trends-news_3" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success trends-news" style="border: 2px solid;"><div style=""><i class="fa fa-newspaper-o"></i></div><div style="font-size:100%;" translate="no">TRENDS NEWS</div><div style="font-size:80%;">Trends news</div></button>
-                            </div>
+                            </div>-->
                             
                             <div style="margin-bottom:5px">
                                 <button id="sport-results-3" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success sport-results" style="border: 2px solid;"><div style=""><i class="fa-solid fa-futbol"></i></div><div style="font-size:100%;" translate="no">SPORTS</div><div style="font-size:80%;">Sport results</div></button>
@@ -2437,11 +2437,11 @@
                                                 <div class="col-12"><button id="cryptonews_2" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success cryptonews" style="border: 2px solid;"><div style=""><i class="fa fa-newspaper-o"></i></div><div style="font-size:100%;" translate="no">NEWS</div><div style="font-size:80%;">Crypto news</div><div style="font-size:80%;" ><div style="display:inline">Cool App</div> <div style="display:inline">|</div> <div style="display:inline">News</div></div></button></div>
                                             </div>
                                         </li>
-                                        <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top">
+                                        <!--<li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top">
                                             <div class="row" style="text-align: center; padding: 10px">
                                                 <div class="col-12"><button id="trends-news" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success trends-news" style="border: 2px solid;"><div style=""><i class="fa fa-newspaper-o"></i></div><div style="font-size:100%;" translate="no">TRENDS NEWS</div><div style="font-size:80%;">Trends news</div><div style="font-size:80%;" ><div style="display:inline">Cool App</div> <div style="display:inline">|</div> <div style="display:inline">News</div></div></button></div>
                                             </div>
-                                        </li>
+                                        </li>-->
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top">
                                             <div class="row" style="text-align: center; padding: 10px">
                                                 <div class="col-12"><button id="sport-results" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success sport-results" style="border: 2px solid;"><div style=""><i class="fa-solid fa-futbol"></i></div><div style="font-size:100%;" translate="no">SPORTS</div><div style="font-size:80%;">Sport results</div><div style="font-size:80%;" ><div style="display:inline">Cool App</div> <div style="display:inline">|</div> <div style="display:inline">Sports</div></div></button></div>
