--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -933,6 +933,8 @@
                                                 <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Soccer Penalty</strong></div>
                                                 <div style="display:inline;"> | </div>
+                                                <div translate="no" style="display:inline;"><strong>RPG Game</strong></div>
+                                                <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>WebTorrent</strong></div>
                                                 <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Music Player</strong></div>
@@ -1007,6 +1009,8 @@
                                             <div translate="no" style="display:inline;"><strong>Latin Crush</strong></div>
                                             <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>Soccer Penalty</strong></div>
+                                            <div style="display:inline;"> | </div>
+                                            <div translate="no" style="display:inline;"><strong>RPG Game</strong></div>
                                             <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>WebTorrent</strong></div>
                                             <div style="display:inline;"> | </div>
