--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_rules.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_rules.xml
@@ -108,6 +108,8 @@
                                     
                                     <h3>Language: Language Learning.</h3>
                                     
+                                    <h3>IQ: IQ Test.</h3>
+                                    
                                     <h3><div style="display: inline">Paid Games:</div> 
                                         <div style="display: inline">Chess</div> <div style="display: inline">|</div> 
                                         <div style="display: inline">Sudoku</div> <div style="display: inline">|</div> 
@@ -121,7 +123,10 @@
                                         <div style="display: inline">Checkers</div> <div style="display: inline">|</div> 
                                         <div style="display: inline">Xiangqi (Chinese chess)</div> <div style="display: inline">|</div> 
                                         <div style="display: inline">Domino</div> <div style="display: inline">|</div> 
-                                        <div style="display: inline">Latin Crush</div>.</h3>
+                                        <div style="display: inline">Latin Crush</div> <div style="display: inline">|</div> 
+                                        <div style="display: inline">Soccer Penalty</div> <div style="display: inline">|</div> 
+                                        <div style="display: inline">RPG Game</div>.
+                                    </h3>
                                     
                                     <!--<h3><div style="display: inline">Free Minigames:</div> 
                                         <div style="display: inline">Blockrain</div> <div style="display: inline">|</div> 
