--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -944,7 +944,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.739"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.740"></script>
                     
                     <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     -->
@@ -993,6 +993,7 @@
                     <input type="hidden" id="sandbox" t-att-value="sandbox"/>
                     <input type="hidden" id="a_ads_val" t-att-value="a_ads"/>
                     <input type="hidden" id="mainnet" t-att-value="mainnet"/>
+                    <input type="hidden" id="pi_ad_seconds" t-att-value="pi_ad_seconds"/>
                     <button id="open_mainnet_redirect" class="open_mainnet_redirect" style="display:none"></button>
                     <t t-if="pi_main_user">
                         <input type="hidden" id="pi_main_user" t-att-value="pi_main_user.pi_user_code"/>
