--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1405,7 +1405,7 @@
                                     Activate automatic Pi Ads.
                                 </div>
                                 <div class="text-white">
-                                    (1 Pi Ad / <t t-esc="pi_ad_hours" />h)
+                                    (<t t-esc="pi_ad_max" /> Pi Ad / <t t-esc="pi_ad_hours" />h)
                                 </div>
                               </label>
                             </div>
