--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1404,10 +1404,19 @@
                                 <div class="text-white">
                                     Activate automatic Pi Ads.
                                 </div>
+                                <!--<div class="text-white">
+                                    (<t t-esc="pi_ad_max" /> Pi Ads / <t t-esc="pi_ad_hours" />h)
+                                </div>-->
+                              </label>
+                            </div>
+                            
+                            <div class="row justify-content-center text-center p-3 mb-2 bg-info bg-gradient text-white rounded show_pi_ad_automatic" style="filter: contrast(100%) !important; margin-left: 1px; margin-right: 1px">
+                                <div class="text-white">
+                                    Max ads per day:
+                                </div>
                                 <div class="text-white">
                                     (<t t-esc="pi_ad_max" /> Pi Ads / <t t-esc="pi_ad_hours" />h)
                                 </div>
-                              </label>
                             </div>
                             
                             <div id="accordionExchange" style="margin-bottom:5px" t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">
