--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1412,7 +1412,7 @@
                             
                             <div class="row justify-content-center text-center p-3 mb-2 bg-info bg-gradient text-white rounded show_pi_ad_automatic" style="filter: contrast(100%) !important; margin-left: 1px; margin-right: 1px">
                                 <div class="text-white">
-                                    Max ads per day:
+                                    Max ads by day:
                                 </div>
                                 <div class="text-white">
                                     (<t t-esc="pi_ad_max" /> Pi Ads / <t t-esc="pi_ad_hours" />h)
