--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -37,7 +37,7 @@
                     
                     <script src="https://sdk.minepi.com/pi-sdk.js"></script>
                     
-                    <script src="/website_pinetwork_games_odoo/static/src/chess/js/functions.js?v=1.184"></script>
+                    <script src="/website_pinetwork_games_odoo/static/src/chess/js/functions.js?v=1.186"></script>
                     
                     <!--
                     <script t-if="mainnet in ['Testnet ON', 'Testnet OFF']" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
@@ -322,7 +322,7 @@
                                                             <button id="button_click" name="button_click" class="btn btn-success fw-bold" disabled="true"><div><i class="fa-solid fa-money-bill-transfer"></i></div><div>Donate to unblock with <span t-esc="amount" /> Pi for 30 days from today</div><div style="font-size:80%;" t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">Earn Latin points (<t t-esc="amount_latin_pay" />)</div></button>
                                                             <div class="show_test_app" t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">
                                                                 <br/>
-                                                                <button id="test_app" name="test_app" class="btn btn-success fw-bold"><div><i class="fa-solid fa-flask-vial"></i></div><div>Test app</div></button>
+                                                                <button id="test_app" name="test_app" class="btn btn-success fw-bold" disabled="true"><div><i class="fa-solid fa-flask-vial"></i></div><div>Test app</div></button>
                                                             </div>
                                                         </div>
                                                     </div>
