--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -569,6 +569,8 @@
                     <body>
                         <div class="container form-group" style="text-align:center; max-width: 810px;">
                             <br/>
+                            <h1>Welcome to Your LatinChain Club</h1>
+                            <br/>
                             <h3>You can find these, our most notable books by ASIN or ISBN, in bookstores as Amazon (globally), Iberlibro (Europe) or others around the world. There are also courses available. Shipping worldwide.</h3>
                             <br/>
                             <div style="margin-bottom:10px;">
