--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -581,7 +581,7 @@
                             </div>
                             <t t-if="with_links">
                                 <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
-                                    <h3>Clothing and Collectibles Store:</h3>
+                                    <h3>Clothing and Collectibles in César OpenSource Store with Spring:</h3>
                                 </div>
                                 <h5 style="padding:10px;" class="border-gradient-rounded product">
                                     <iframe style="border-radius:24px;border:none" src="https://embed.creator-spring.com/widget?slug=my-store-10dea32&amp;per=30&amp;currency=&amp;page=1&amp;layout=carousel-wide&amp;theme=light" title="César OpenSource Store Merch store powered by Spring" width="100%" height="420" data-reactroot=""></iframe>
@@ -633,7 +633,7 @@
                             <h5 style="padding:10px;" class="border-gradient-rounded product"><img src="https://img-c.udemycdn.com/course/200_H/6595211_0834_3.jpg" width="180px" height="110px" /><br/><strong>Cómo crear tu marca personal by Cesar - OpenSource Expert</strong><br/> (<div style="display:inline;">Business improvement</div>) (<div style="display:inline;">Spanish</div>)<div style="">Udemy Course Author: César Cordero</div> <t t-if="with_links"><a href="/brand-course/" target="_blank">Udemy course</a></t></h5>
                             <br/>
                             <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
-                                <h3>Amazon books (DRM-free):</h3>
+                                <h3>Amazon books:</h3>
                             </div>
                             <h5 style="padding:10px;" class="border-gradient-rounded product"><img src="https://m.media-amazon.com/images/I/71Ir+19r4+L._CLa|2909,2525|81JvHXej7bL.jpg,71eGkTh9m0L.jpg|0,0,1322,2525+1587,0,1322,2525+661,0,1587,2525_._SY300_.jpg" width="210px" height="180px" /><br/><strong>Books Collection<br/>(ASIN: B0F771VKRF)</strong><div style="">Amazon Book Author: César Cordero</div> <t t-if="with_links"><a href="/books-collection/" target="_blank">Books Collection link</a></t></h5>
                             <h5 style="padding:10px;" class="border-gradient-rounded product"><img src="https://m.media-amazon.com/images/I/61HydA6aoZL._SL1499_.jpg" width="120px" height="180px" /><br/><strong>How to develop a Pi App (webapp) on the Pi Network<br/> (ASIN: B0DK3NJ23V and ASIN: B0DK4N3XTB)<br/> (ISBN: 979-8343272321)</strong><br/> (<div style="display:inline;">Tech</div>) (<div style="display:inline;">English</div>)<div style="">Amazon Book Author: César Cordero</div> <t t-if="with_links"><a href="/piapps-book/ebook" target="_blank">eBook</a> | <a href="/piapps-book/paperback" target="_blank">Paperback</a></t></h5>
