--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -590,7 +590,7 @@
                             <br/>
                             <t t-if="with_links">
                                 <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
-                                    <h3>Products in Amazon:</h3>
+                                    <h3>Best Products in Amazon:</h3>
                                 </div>
                                 <div style="padding:10px;" class="border-gradient-rounded product">
                                     <div class="row">
