--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1412,9 +1412,13 @@
                             
                             <div class="row justify-content-center text-center p-3 mb-2 bg-info bg-gradient text-white rounded show_pi_ad_automatic" style="filter: contrast(100%) !important; margin-left: 1px; margin-right: 1px">
                                 <div class="text-white">
-                                    Max ads number:
+                                    Max rewarded ads:
                                     <br/>
                                     (<span id="pi_ad_counter">0</span>/<t t-esc="pi_ad_max" /> Pi Ads | <t t-esc="pi_ad_hours" />h)
+                                    <br/>
+                                    Max interstitias ads:
+                                    <br/>
+                                    (1 Pi Ads | 10 minutes)
                                 </div>
                             </div>
                             
