--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -618,35 +618,31 @@
                             <br/>
                             <div style="margin-bottom:10px;">
                                 <h3 style="text-align:left">
-                                    <div class="form-check">
+                                    <div class="form-check" style="margin-bottom: 10px">
                                       <input class="form-check-input" type="radio" name="show-section" id="show-all" value="show-all" checked="true"/>
                                       <label class="form-check-label" for="show-all">
                                         Show all sections
                                       </label>
                                     </div>
-                                    <br/>
-                                    <div class="form-check" t-if="with_links">
+                                    <div class="form-check" style="margin-bottom: 10px" t-if="with_links">
                                       <input class="form-check-input" type="radio" name="show-section" id="show-spring-clothing" value="show-spring-clothing" />
                                       <label class="form-check-label" for="show-spring-clothing">
                                         Show only Spring clothing store
                                       </label>
                                     </div>
-                                    <br/>
-                                    <div class="form-check" t-if="with_links">
+                                    <div class="form-check" style="margin-bottom: 10px" t-if="with_links">
                                       <input class="form-check-input" type="radio" name="show-section" id="show-amazon-best-deals" value="show-amazon-best-deals" />
                                       <label class="form-check-label" for="show-amazon-best-deals">
                                         Show only Amazon best sellers and deals
                                       </label>
                                     </div>
-                                    <br/>
-                                    <div class="form-check">
+                                    <div class="form-check" style="margin-bottom: 10px">
                                       <input class="form-check-input" type="radio" name="show-section" id="show-udemy-courses" value="show-udemy-courses" />
                                       <label class="form-check-label" for="show-udemy-courses">
                                         Show only Udemy courses
                                       </label>
                                     </div>
-                                    <br/>
-                                    <div class="form-check">
+                                    <div class="form-check" style="margin-bottom: 10px">
                                       <input class="form-check-input" type="radio" name="show-section" id="show-amazon-books" value="show-amazon-books" />
                                       <label class="form-check-label" for="show-amazon-books">
                                         Show only Amazon books
